[metadata]
package_name = dhmsw
description = Digital Holographic Microscope Software
long_description = Digital Holographic Microscope Software
author = S. F. Fregoso and collaborators
author_email = sfregoso@jpl.nasa.gov
license = Apache
edit_on_github = False
github_project = DHM/dhmsw
description-file = README.md
url = https://github.jpl.nasa.gov/DHM/dhmsw
homepage = https://github.jpl.nasa.gov/DHM/dhmsw
version = 0.2.0

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build

# Python code quality checker
[flake8]
# See http://flake8.pycqa.org/en/latest/user/configuration.html
exclude: .git, __pycache__, test*
max-line-length = 120

